--- a/Css/styles.css
+++ b/Css/styles.css
@@ -301,7 +301,7 @@
     border: none;
     outline: none;
     padding: 1rem;
-    color: var(--title-color);
+    color: #0d6fc5;
     font-size: var(--small-font-size);
     font-family: var(--body-font);
     font-weight: 500;
@@ -448,7 +448,7 @@
   
   /*=============== BREAKPOINTS ===============*/
   /* For small devices */
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 390px) {
     .container {
       margin-left: 1rem;
       margin-right: 1rem;
@@ -465,6 +465,8 @@
     .skills__box {
       column-gap: 1rem;
     }
+
+    
   }
   
   /* For medium devices */
