--- a/Css/styles.css
+++ b/Css/styles.css
@@ -493,6 +493,12 @@ font-size: 25px;
     .skills__box {
       column-gap: 1rem;
     }
+ .logo{
+      font-size: 1rem;
+    }
+    .copyright p{
+      font-size: 0.8rem;
+  }
 
     
   }
@@ -515,7 +521,7 @@ font-size: 25px;
       flex-direction: column;
       row-gap: 2rem;
     }
-    
+   
   }
   
   @media screen and (min-width: 776px) {
