--- a/Css/styles.css
+++ b/Css/styles.css
@@ -495,6 +495,9 @@ font-size: 25px;
       flex-direction: column;
       row-gap: 1rem;
     }
+    .profile__social-link{
+      font-size: 1.7rem;
+    }
   
     .skills__box {
       column-gap: 1rem;
