--- a/Css/styles.css
+++ b/Css/styles.css
@@ -174,6 +174,9 @@
     align-self: center;
   }
   
+  .email{
+    color: white;
+  }
   .profile__border {
     border: 3.5px solid var(--first-color);
     justify-self: center;
@@ -305,7 +308,7 @@
     border: none;
     outline: none;
     padding: 1rem;
-    color: #0d6fc5;
+    color: #fff;
     font-size: var(--small-font-size);
     font-family: var(--body-font);
     font-weight: 500;
@@ -316,7 +319,8 @@
   }
   
   .filters__button:hover {
-    background-color: var(--body-color);
+    background-color: #3498db;
+    color: #fff;
   }
   
   /*=============== PROJECTS ===============*/
