--- a/Css/styles.css
+++ b/Css/styles.css
@@ -359,6 +359,14 @@
     margin-bottom: .75rem;
   }
   
+  .tech{
+  font-size: var(--normal-font-size);
+  font-weight: 500;
+  background-color: #3aa6d4;
+  color: #fff;
+  border-radius: 10px;
+  padding: 2px;
+  }
   .projects__button {
     padding: .5rem;
   }
