--- a/Css/styles.css
+++ b/Css/styles.css
@@ -68,7 +68,9 @@
     max-width: 100%;
     height: auto;
   }
-  
+  p{
+    font-size: var(--normal-font-size);
+  }
   
   /* THEME */
   .change-theme {
@@ -339,7 +341,8 @@
                 hsla(var(--hue), 24%, 40%, .3) 0%, 
                 hsla(var(--hue), 24%, 4%, 1) 95%);
     display: grid;
-    align-items: flex-end;
+    align-items: center; /* /flex-end */
+    text-align: center;
     padding: 1.5rem 1.25rem;
     transition: .3s;
   }
@@ -359,15 +362,16 @@
   }
   
   .tech{
-  font-size: var(--normal-font-size);
+  font-size: var(--smaller-font-size);
   font-weight: 500;
-  background-color: #3aa6d4;
+  background-color: #047eb3;
   color: #fff;
   border-radius: 10px;
   padding: 2px;
   }
   .projects__button {
-    padding: .5rem;
+    padding: .2rem;
+    background-color: #047eb3;
   }
   
   .projects__card:hover .projects__modal {
